--- a/client/recipes/Recipe.html
+++ b/client/recipes/Recipe.html
@@ -1,7 +1,7 @@
 <template name= "Recipe">
 	<article class="recipe">
 		<h3>{{name}}</h3>
-		<p>{{desc}}</p>
+		<a href="/recipe/{{_id}}">View Details</a>
 		<p>
 			{{#each ingredients}}
 				<span class="ingredient">
@@ -9,6 +9,7 @@
 				</span>
 			{{/each}}
 		</p>
-		<a href="/recipe/{{_id}}">View Details</a>
+		<button class="btn-primary toggle-menu">Add To Menu</button>
+		<button class="btn-deny toggle-menu">Remove From Menu</button>
 	</article>
 </template>
