--- a/client/recipes/Recipe.html
+++ b/client/recipes/Recipe.html
@@ -1,5 +1,5 @@
 <template name= "Recipe">
-	<article class="recipe">
+	<article class="recipe {{#if inMenu}}in-menu{{/if}}">
 		<h3>{{name}}</h3>
 		<a href="/recipe/{{_id}}">View Details</a>
 		<p>
