Each -else for No Result

--- a/client/recipes/Recipe.html
+++ b/client/recipes/Recipe.html
@@ -9,7 +9,10 @@
 				</span>
 			{{/each}}
 		</p>
-		<button class="btn-primary toggle-menu">Add To Menu</button>
-		<button class="btn-deny toggle-menu">Remove From Menu</button>
+		{{#if inMenu}}
+			<button class="btn-deny toggle-menu">Remove From Menu</button>
+		{{else}}
+			<button class="btn-primary toggle-menu">Add To Menu</button>
+		{{/if}}
 	</article>
 </template>
